--- a/template-dev.yaml
+++ b/template-dev.yaml
@@ -7,7 +7,7 @@ Description: >
 Globals:
   Function:
     Tracing: Active
-    CodeUri: build/libs/HandsOnOne-0.1-all.jar
+    CodeUri: build/libs/DevopsProject-0.1-all.jar
     Runtime: java17
     Timeout: 30
     MemorySize: 1024
@@ -17,7 +17,7 @@ Resources:
     Type: AWS::Serverless::Api
     Properties:
       StageName: dev
-      Name: SM703 Hands-on-dev
+      Name: SM703 Devops-project
 
 
   HelloWorldFunctionDev:
