Add deploy workflows, .yml and samconfig.toml files

--- a/samconfig-dev.toml
+++ b/samconfig-dev.toml
@@ -1,8 +1,8 @@
 version = 0.1
 [default.deploy.parameters]
-stack_name = "sam-app-dev"
+stack_name = "sam-app-project-dev"
 resolve_s3 = true
-s3_prefix = "sam-app-dev"
+s3_prefix = "sam-app-project-dev"
 region = "eu-west-1"
 confirm_changeset = true
 capabilities = "CAPABILITY_IAM"
