--- a/samconfig-prod.toml
+++ b/samconfig-prod.toml
@@ -1,8 +1,8 @@
 version = 0.1
 [default.deploy.parameters]
-stack_name = "sam-app-prod"
+stack_name = "sam-app-project-prod"
 resolve_s3 = true
-s3_prefix = "sam-app-prod"
+s3_prefix = "sam-app-project-prod"
 region = "eu-west-1"
 confirm_changeset = true
 capabilities = "CAPABILITY_IAM"
