--- a/template.yaml
+++ b/template.yaml
@@ -36,7 +36,7 @@ Resources:
   AdditionFunctionLogGroupProd:
     Type: AWS::Logs::LogGroup
     Properties:
-      LogGroupName: !Sub "/aws/lambda/${AdditionFunctionLogGroupProd}"
+      LogGroupName: !Sub "/aws/lambda/${AdditionFunctionProd}"
       RetentionInDays: 7
 
 Outputs:
