--- a/template-dev.yaml
+++ b/template-dev.yaml
@@ -1,8 +1,8 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Description: >
-  lambda-micronaut-sample
-  Sample SAM Template for lambda-micronaut
+  lambda-micronaut-addition
+  Addition of 2 integers, SAM Template for lambda-micronaut
 
 Globals:
   Function:
@@ -18,7 +18,27 @@ Resources:
     Properties:
       StageName: dev
       Name: SM703 Devops-project
-
+      Auth:
+        DefaultAuthorizer: NONE
+        AddDefaultAuthorizerToCorsPreflight: false
+      DefinitionBody:
+        swagger: "2.0"
+        info:
+          title: "Your API"
+        paths:
+          /add/{num1}/{num2}:
+            get:
+              responses:
+                '200':
+                  description: OK
+              x-amazon-apigateway-integration:
+                type: aws_proxy
+                uri: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${AdditionFunctionDev.Arn}/invocations
+                httpMethod: GET
+                passthroughBehavior: WHEN_NO_MATCH
+                responses:
+                  default:
+                    statusCode: '200'
 
   AdditionFunctionDev:
     Type: AWS::Serverless::Function
@@ -26,11 +46,11 @@ Resources:
       Handler: io.micronaut.function.aws.proxy.MicronautLambdaHandler
       Policies:
       Events:
-        GetHelloWorld:
+        GetAddition:   # Changed the event name to GetAddition
           Type: Api
           Properties:
             RestApiId: !Ref MyApi
-            Path: /
+            Path: /add/{num1}/{num2}  # Updated the path to /add/{num1}/{num2}
             Method: get
 
   AdditionFunctionLogGroupDev:
