Trying to allow non authenticated access

--- a/template.yaml
+++ b/template.yaml
@@ -21,6 +21,24 @@ Resources:
       Auth:
         DefaultAuthorizer: NONE
         AddDefaultAuthorizerToCorsPreflight: false
+      DefinitionBody:
+        swagger: "2.0"
+        info:
+          title: "Addition"
+        paths:
+          /add/{num1}/{num2}:
+            get:
+              responses:
+                '200':
+                  description: OK
+              x-amazon-apigateway-integration:
+                type: aws_proxy
+                uri: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${AdditionFunctionProd.Arn}/invocations
+                httpMethod: GET
+                passthroughBehavior: WHEN_NO_MATCH
+                responses:
+                  default:
+                    statusCode: '200'
 
   AdditionFunctionProd:
     Type: AWS::Serverless::Function
@@ -28,11 +46,11 @@ Resources:
       Handler: io.micronaut.function.aws.proxy.MicronautLambdaHandler
       Policies:
       Events:
-        GetAddition:   # Changed the event name to GetAddition
+        GetAddition:
           Type: Api
           Properties:
             RestApiId: !Ref MyApi
-            Path: /
+            Path: /add/{num1}/{num2}
             Method: get
 
   AdditionFunctionLogGroupProd:
