--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id("com.github.johnrengelman.shadow") version "7.1.2"
     id("io.micronaut.application") version "3.7.0"
+    id("org.sonarqube") version "3.3"
 }
 
 version = "0.1"
@@ -37,6 +38,15 @@ micronaut {
     processing {
         incremental(true)
         annotations("tr.edu.metu.sm703.*")
+    }
+}
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", "tolunayg_sm703-devops-project"
+        property "sonar.organization", "tolunayg"
+        property "sonar.host.url", "https://sonarcloud.io"
+        property "sonar.login", "1e469c3cd69482f75c96e307e0c338aeacf73040"
     }
 }
 
