--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -48,10 +48,15 @@ jobs:
         run: |
           ./gradlew build sonarqube -Dsonar.projectKey=tolunayg_sm703-devops-project -Dsonar.organization=tolunayg -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
+      - name: Install SonarScanner CLI
+        run: |
+          curl -L https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.6.0.2311-linux.zip -o sonar-scanner.zip
+          unzip sonar-scanner.zip
+          export PATH=$PATH:${PWD}/sonar-scanner-4.6.0.2311-linux/bin
+
       - name: Check SonarQube analysis results
         id: check-sonarqube-results
         run: |
-          # Run SonarScanner CLI to retrieve analysis results
           sonar-scanner \
             -Dsonar.projectKey=tolunayg_sm703-devops-project \
             -Dsonar.organization=tolunayg \
