--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -11,8 +11,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    strategy:
+      fail-fast: false
+      matrix:
+        language: [ 'java' ]
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
       - name: Set up JDK 11
         uses: actions/setup-java@v3
@@ -25,6 +31,12 @@ jobs:
 
       - name: change permission
         run: chmod +x gradlew
+
+      - name: Set up CodeQL
+        uses: github/codeql-action/init@v2
+        with:
+          languages: ${{ matrix.language }}
+          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
       - name: Configure AWS and SAM
         uses: aws-actions/setup-sam@v1
@@ -40,13 +52,10 @@ jobs:
         with:
           arguments: build
 
-      - name: Set up CodeQL
-        uses: github/codeql-action/init@v2
-        with:
-          languages: java
-
       - name: Run CodeQL analysis
         uses: github/codeql-action/analyze@v2
+        with:
+          category: "/language:${{matrix.language}}"
 
       - name: Check CodeQL analysis results
         run: |
