--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -60,6 +60,10 @@ jobs:
         with:
           category: "/language:${{ matrix.language }}"
 
+      - name: Print SARIF file
+        run: |
+          cat ${{ steps.codeql.outputs.sarif }}
+
       - name: Check CodeQL analysis results
         run: |
           if jq -e '.runs[].results | length > 0' ${{ steps.codeql.outputs.sarif }} >/dev/null; then
