--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -1,3 +1,10 @@
+# This workflow uses actions that are not certified by GitHub.
+# They are provided by a third-party and are governed by
+# separate terms of service, privacy policy, and support
+# documentation.
+# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
+
 name: Java CI with Gradle to AWS - Production
 
 on:
@@ -6,81 +13,39 @@ on:
 
 permissions:
   contents: read
-  security-events: write
-  pull-requests: read
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
-    strategy:
-      fail-fast: false
-      matrix:
-        language: [ 'java' ]
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
+      - uses: actions/checkout@v3
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
           java-version: '11'
           distribution: 'temurin'
-
-      - name: Install jq
-        run: sudo apt-get install -y jq
-
       - name: change permission
         run: chmod +x gradlew
-
-      - name: Set up CodeQL
-        uses: github/codeql-action/init@v2
-        with:
-          languages: ${{ matrix.language }}
-          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-
       - name: Configure AWS and SAM
         uses: aws-actions/setup-sam@v1
-
       - uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-west-1
-
       - name: Build with Gradle
         uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
         with:
           arguments: build
 
-      - name: Run CodeQL analysis
-        id: codeql
-        uses: github/codeql-action/analyze@v2
-        with:
-          category: "/language:${{ matrix.language }}"
-          output: ./codeql/
+      - name: Build with Gradle
+          run: ./gradlew build sonarqube \
+            -Dsonar.projectKey=tolunayg_sm703-devops-project \
+            -Dsonar.organization=tolunayg \
+            -Dsonar.host.url=https://sonarcloud.io \
+            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
-      - name: Print SARIF file
-        run: |
-          sarif_file="./codeql/results.sarif"
-          if [ -f "$sarif_file" ]; then
-            cat "$sarif_file"
-          else
-            echo "SARIF file not found. No security vulnerabilities detected."
-          fi
-      - name: Check CodeQL analysis results
-        run: |
-          sarif_file="./codeql/results.sarif"
-          if [ -f "$sarif_file" ]; then
-            if jq -e '.runs[].results | length > 0' "$sarif_file" >/dev/null; then
-              echo "Security vulnerabilities found in the code. Failing the workflow."
-              exit 1
-            else
-              echo "No security vulnerabilities found."
-            fi
-          else
-            echo "SARIF file not found. No security vulnerabilities detected."
-          fi
       - name: Deploy with SAM
         run:  sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --config-file samconfig-prod.toml
