Trying to fix sonarQube

--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -26,10 +26,8 @@ jobs:
         with:
           java-version: '11'
           distribution: 'temurin'
-
       - name: change permission
         run: chmod +x gradlew
-
       - name: Configure AWS and SAM
         uses: aws-actions/setup-sam@v1
       - uses: aws-actions/configure-aws-credentials@v1
@@ -37,18 +35,14 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-west-1
-
       - name: Build with Gradle
         uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
         with:
           arguments: build
 
-      - name: Build with Gradle
-        run: ./gradlew build sonarqube \
-            -Dsonar.projectKey=tolunayg_sm703-devops-project \
-            -Dsonar.organization=tolunayg \
-            -Dsonar.host.url=https://sonarcloud.io \
-            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+      - name: Build with Gradle and Run SonarQube analysis
+        run: |
+          ./gradlew build sonarqube -Dsonar.projectKey=tolunayg_sm703-devops-project -Dsonar.organization=tolunayg -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
       - name: Deploy with SAM
         run:  sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --config-file samconfig-prod.toml
