--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -44,5 +44,19 @@ jobs:
         run: |
           ./gradlew build sonarqube -Dsonar.projectKey=tolunayg_sm703-devops-project -Dsonar.organization=tolunayg -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
+      - name: Run OWASP Dependency Check
+        run: ./gradlew dependencyCheckAnalyze
+
+      - name: Check OWASP Dependency Check results
+        run: |
+          dependency_check_report="./build/reports/dependency-check-report.xml"
+          if [ -f "$dependency_check_report" ]; then
+            vulnerable_count=$(grep -c '<vulnerability' "$dependency_check_report")
+            if [[ $vulnerable_count -gt 0 ]]; then
+              echo "OWASP Dependency Check found $vulnerable_count vulnerabilities. Failing the build."
+              exit 1
+            fi
+          fi
+
       - name: Deploy with SAM
         run:  sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --config-file samconfig-prod.toml
