--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id("com.github.johnrengelman.shadow") version "7.1.2"
     id("io.micronaut.application") version "3.7.0"
     id("org.sonarqube") version "3.3"
+    id("org.owasp.dependencycheck") version '6.1.2'
 }
 
 version = "0.1"
@@ -19,19 +20,23 @@ dependencies {
     implementation("io.micronaut:micronaut-validation")
 
     testImplementation("io.micronaut:micronaut-http-client")
-
 }
 
+dependencyCheck {
+    failBuildOnCVSS 9.0 // Set the desired CVSS score to fail the build
+}
 
 application {
     mainClass.set("tr.edu.metu.sm703.Application")
 }
+
 java {
     sourceCompatibility = JavaVersion.toVersion("11")
     targetCompatibility = JavaVersion.toVersion("11")
 }
 
 graalvmNative.toolchainDetection = false
+
 micronaut {
     runtime("lambda_java")
     testRuntime("junit5")
@@ -49,7 +54,6 @@ sonarqube {
         property "sonar.login", "1e469c3cd69482f75c96e307e0c338aeacf73040"
     }
 }
-
 
 tasks.named("dockerfileNative") {
     args(
